logs/dag_id=etl_procesing/run_id=manual__2023-11-17T06:17:26.684371+00:00/task_id=load_phase/attempt=1.log
[2023-11-17T06:17:44.120+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_procesing.load_phase manual__2023-11-17T06:17:26.684371+00:00 [queued]>
[2023-11-17T06:17:44.130+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_procesing.load_phase manual__2023-11-17T06:17:26.684371+00:00 [queued]>
[2023-11-17T06:17:44.130+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-11-17T06:17:44.144+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): load_phase> on 2023-11-17 06:17:26.684371+00:00
[2023-11-17T06:17:44.155+0000] {standard_task_runner.py:57} INFO - Started process 40791 to run task
[2023-11-17T06:17:44.159+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'etl_procesing', 'load_phase', 'manual__2023-11-17T06:17:26.684371+00:00', '--job-id', '900', '--raw', '--subdir', 'DAGS_FOLDER/dag-lstm.py', '--cfg-path', '/tmp/tmp9mgirmb4']
[2023-11-17T06:17:44.164+0000] {standard_task_runner.py:85} INFO - Job 900: Subtask load_phase
[2023-11-17T06:17:44.218+0000] {task_command.py:416} INFO - Running <TaskInstance: etl_procesing.load_phase manual__2023-11-17T06:17:26.684371+00:00 [running]> on host 4c85f18ab3d7
[2023-11-17T06:17:44.301+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='nguyenthung' AIRFLOW_CTX_DAG_ID='etl_procesing' AIRFLOW_CTX_TASK_ID='load_phase' AIRFLOW_CTX_EXECUTION_DATE='2023-11-17T06:17:26.684371+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-17T06:17:26.684371+00:00'
[2023-11-17T06:17:44.324+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag-lstm.py", line 144, in load
    extras.execute_values(cur, insert_query, rows)  # Bulk insertion of rows
  File "/home/airflow/.local/lib/python3.8/site-packages/psycopg2/extras.py", line 1299, in execute_values
    cur.execute(b''.join(parts))
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ...IG','2023-11-17','13:15:20','HOSE','STOCK','26.1','27.9','24...
                                                             ^

[2023-11-17T06:17:44.334+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_procesing, task_id=load_phase, execution_date=20231117T061726, start_date=20231117T061744, end_date=20231117T061744
[2023-11-17T06:17:44.345+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 900 for task load_phase (INSERT has more expressions than target columns
LINE 1: ...IG','2023-11-17','13:15:20','HOSE','STOCK','26.1','27.9','24...
                                                             ^
; 40791)
[2023-11-17T06:17:44.373+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-17T06:17:44.392+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
